# potato_launcher

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  backend.dockerfile  build.env  docker-compose-dev.yml  docker-compose.yml  flake.nix  frontend.dockerfile
.github/workflows/: build-images.yml  build-launcher.yml  build.yml  check.yml  ci.yml  deploy.yml  docs.yml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  dockerfile  go.mod  go.sum  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/gateway/: modpack.py  settings.py
backend/app/gateway/json/: db.py  modpack.py  setting.py
backend/app/instance_builder/: readme.md
backend/app/integrations/: fabric_loader.py  forge_loader.py  neoforge_loader.py  vanilla_versions.py
backend/app/models/: base.py  config.py  modpack.py  setting.py  token.py
backend/app/routers/: auth.py  mc_versions.py  modpacks.py  settings.py  ws.py
backend/app/routes/: auth.py  mc_versions.py  modpack.py  modpacks.py  settings.py
backend/app/services/: auth_service.py  connection_manager.py  mc_versions_service.py  runner_service.py  setting_service.py  settings.py
backend/app/utils/: security.py  stub.py
backend/cmd/server/: main.go
backend/internal/api/: api.go  auth.go  converters.go  errors.go  handlers.go  instances.go  launchers.go  mcversions.go  settings.go  types.go
backend/internal/config/: config.go
backend/internal/models/: models.go
backend/internal/services/: auth.go  hub.go  mcversions.go  runner.go
backend/internal/storage/: store.go
backend/internal/storage/specstore/: store.go
crates/auth/: Cargo.toml
crates/auth/src/: flow.rs  lib.rs  storage.rs  user_info.rs
crates/auth/src/providers/: base.rs  elyby.rs  microsoft.rs  mod.rs  offline.rs  telegram.rs
docs/: about.md  creating-instances.md  development.md  index.md  package.json
docs/.vitepress/: config.mts
docs/setting-up/: launcher.md  server.md
flatpak/: .gitignore  gen_manifest.py  manifest-template.yml  template.desktop
frontend/: .gitignore  Dockerfile  env.d.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/docker-entrypoint.d/: 99-runtime-config.sh
frontend/src/: App.tsx  App.vue
frontend/src/assets/: main.css
frontend/src/components/: BuildLogs.vue  DeleteConfirmModal.tsx  DeleteConfirmModal.vue  InstanceDetails.vue  InstanceForm.vue  InstanceFormFields.vue  InstanceSidebar.vue  LoginForm.tsx  LoginForm.vue  ModpackDetails.tsx  ModpackDetails.vue  ModpackForm.tsx  ModpackForm.vue  ModpackFormFields.vue  ModpackSidebar.tsx  ModpackSidebar.vue  Notification.tsx  NotificationToast.vue  SettingsForm.tsx  SettingsForm.vue
frontend/src/components/icons/: AppleIcon.vue  GithubIcon.vue
frontend/src/composables/: useAuth.ts  useInstanceForm.ts  useModpackForm.ts  useNotification.ts  useWebSocket.ts
frontend/src/hooks/: useApi.ts  useAuth.ts  useNotification.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts  websocket.ts
frontend/src/types/: api.ts  auth.ts  dom.d.ts
frontend/src/views/: Dashboard.vue  Downloads.vue
instance_builder/: .gitignore  Cargo.toml  README.md  spec.example.json  spec.json.example
instance_builder/src/: main.rs  spec.rs  utils.rs
instance_builder/src/generate/: mapping.rs  mod.rs  patch.rs  sync.rs
launcher/: Cargo.toml  build.rs
launcher/meta/: mojang-library-patches.json
launcher/src/: constants.rs  lang.rs  main.rs  message_provider.rs  utils.rs
launcher/src/app/: app.rs  auth_state.rs  background_task.rs  colors.rs  instance_sync_state.rs  java_state.rs  language_selector.rs  launch_state.rs  launcher_app.rs  manifest_state.rs  metadata_state.rs  mod.rs  modpack_sync_state.rs  new_instance_state.rs  progress_bar.rs  settings.rs  unified_app.rs
launcher/src/auth/: auth.rs  auth_flow.rs  auth_storage.rs  base.rs  elyby.rs  microsoft.rs  mod.rs  none.rs  offline.rs  telegram.rs  user_info.rs  version_auth_data.rs
launcher/src/config/: build_config.rs  runtime_config.rs
launcher/src/launcher/: compat.rs  launch.rs  update.rs
launcher/src/update_app/: app.rs
launcher/src/version/: complete_version_metadata.rs  instance_storage.rs  mod.rs  os.rs  overrides.rs  sync.rs
modpack_builder/src/: spec.rs
modpack_builder/src/generate/loaders/: forge.rs
nginx/: default.conf
packaging/: configure.py  utils.py
packaging/flatpak/: .gitignore  desktop.template  flatpakref.template  generate.py  manifest-template.yml
packaging/nix/: loadDotenv.nix  package.nix
scripts/: merge_specs.py  remote-instance-build.sh  remote-instance-fetch.sh
shared/: Cargo.toml
shared/src/: adaptive_download.rs  files.rs  java.rs  lib.rs  logs.rs  paths.rs  progress.rs  utils.rs
shared/src/generate/: extra.rs  manifest.rs  mod.rs
shared/src/loader_generator/: fabric.rs  forge.rs  generator.rs  vanilla.rs
shared/src/version/: asset_metadata.rs  extra_version_metadata.rs  version_manifest.rs  version_metadata.rs
