[package]
name = "instance_builder"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
clap = "4.5.19"
env_logger = "0.11.5"
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = "1.0.210"
serde_json = "1.0.128"
shared = { path = "../shared" }
thiserror = "1.0.64"
tokio = "1.40.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.52.0"
