[package]
name = "instance_builder"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = "4.5.41"
env_logger = "0.11.8"
indicatif = "0.18.0"
log = "0.4.27"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.141"
shared = { path = "../shared" }
shell-words = "1.1.0"
thiserror = "2.0.12"
tokio = "1.47.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.55.0"
