[package]
name = "launcher"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
shared = { path = "../shared" }
ctrlc = "3.4.4"
dirs = "5.0.1"
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
flate2 = "1.0.30"
futures = "0.3.30"
image = { version = "0.25.2", features = ["png"] }
lazy_static = "1.5.0"
maplit = "1.0.2"
num_cpus = "1.16.0"
open = "5.3.0"
qrcode = "0.14.1"
reqwest = { version = "0.12.12", features = ["rustls-tls", "json", "stream"], default-features = false }
rfd = "0.14.1"
self-replace = "1.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
tar = "0.4.41"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
tokio-util = "0.7.12"
zip = "2.3.0"
async-trait = "0.1.83"
log = "0.4.22"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
http-body-util = "0.1.2"
serde_urlencoded = "0.7.1"
oauth2 = "4.4.2"
anyhow = { version = "1.0.94", features = ["backtrace"] }
uuid = { version = "1.11.0", features = ["v3"] }
clap = "4.5.23"
rand = "0.8.5"
sys-info = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.174"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle.bin.launcher]
name = "Potato Launcher"
identifier = "com.petr1furious.potato_launcher"
icon = ["launcher/assets/icon.png"]
