[package]
name = "launcher"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
shared = { path = "../shared" }
ctrlc = "3.4.7"
dirs = "6.0.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
flate2 = "1.1.2"
futures = "0.3.31"
image = { version = "0.25.6", features = ["png"], default-features = false }
lazy_static = "1.5.0"
maplit = "1.0.2"
num_cpus = "1.17.0"
open = "5.3.2"
qrcode = "0.14.1"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json", "stream"], default-features = false }
rfd = "0.15.4"
self-replace = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha1 = "0.10.6"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.15"
zip = { version = "4.3.0", default-features = false, features = ["deflate"]}
async-trait = "0.1.88"
log = "0.4.27"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
oauth2 = "5.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
uuid = { version = "1.17.0", features = ["v3"] }
clap = "4.5.41"
rand = "0.9.2"
sys-info = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.174"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle.bin.launcher]
