[package]
name = "launcher"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
shared = { path = "../shared" }
ctrlc = "3.5.1"
dirs = "6.0.0"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image"] }
flate2 = "1.1.5"
futures = "0.3.31"
image = { version = "0.25.8", features = ["png"], default-features = false }
lazy_static = "1.5.0"
maplit = "1.0.2"
num_cpus = "1.17.0"
open = "5.3.2"
qrcode = "0.14.1"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "stream"], default-features = false }
rfd = "0.15.4"
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
zip = { version = "6.0.0", default-features = false, features = ["deflate"]}
async-trait = "0.1.89"
log = "0.4.28"
hyper = { version = "1.8.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
oauth2 = "5.0.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
uuid = { version = "1.18.1", features = ["v3"] }
clap = "4.5.51"
rand = "0.9.2"
sys-info = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.177"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle.bin.launcher]
