[package]
name = "launcher-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
anyhow = { version = "1.0.100", features = ["backtrace"] }
log = "0.4.28"
async-trait = "0.1.89"
http-body-util = "0.1.3"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "stream"], default-features = false }
oauth2 = "5.0.0"
uuid = { version = "1.18.1", features = ["v3"] }
open = "5.3.2"
